# Model-Belief

./: .gitignore  README.md  pyproject.toml
configs/: models.yaml
configs/choice_maps/: diaper.yaml  diaper_first_token.yaml
examples/: end2end.py  pivot_from_logprobs.py
src/model_belief/belief/: __init__.py  belief.py  errors.py  types.py
src/model_belief/config/: __init__.py  derive.py  loader.py  models.py
src/model_belief/llm/: __init__.py  errors.py  generate.py  openai_client.py  openai_response.py  types.py
src/model_belief/pivot/: __init__.py  base.py  custom.py  first_available.py  llm_judge.py  registry.py
tests/: run_test.sh  test_belief.py  test_llm_generate.py  test_llm_openai_client.py  test_llm_openai_response.py  test_pivot_llm.py  test_pivot_methods.py
